# MOSS-Audio-Tokenizer-Eval

./: .gitignore  OPEN_SOURCE_EVALUATION_REFACTOR_PLAN.md  README.md  README_zh.md  environment.yml  pyproject.toml  requirements-eval.txt  requirements-optional.txt
configs/examples/: identity_smoke.yaml  moss_audio_tokenizer.yaml
docs/: adding_adapters.md  distributed.md  io_contract.md  new_cli_quickstart.md
examples/tiny_dataset/: demo.jsonl
moss_eval/: __init__.py  audio.py  cli.py  config.py  dataset.py  distributed.py  manifest.py  reconstruct.py  rvq.py  summary.py
moss_eval/adapters/: __init__.py  base.py  fake.py  moss.py  registry.py
moss_eval/metrics/: __init__.py  core.py
scripts/: prepare_hf_librispeech_test_clean.py
